smtp mail server setup complated

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,8 @@
-MONGO_URI = mongodb://localhost:27017/
-PORT =5000
-JWT_SECRET = 'sajiblogin'
-NODE_ENV = 'development'
+MONGO_URI =mongodb+srv://mdsajibhossen038_db_user:DijxBFoKsq41XVF5@cluster0.zehmtcq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
+JWT_SECRET=sajiblogin
+NODE_ENV=development
+SMTP_USER=982571001@smtp-brevo.com
+SMTP_PASSWORD=g8PKhQ5Brz1FXUIj
+SENDER_EMAIL=mdsajibhossen038@gmail.com
+
