nodemailer setup with google smtp servet

--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ MONGO_URI =mongodb+srv://mdsajibhossen038_db_user:DijxBFoKsq41XVF5@cluster0.zehm
 PORT=5000
 JWT_SECRET=sajiblogin
 NODE_ENV=development
-SMTP_USER=982571001@smtp-brevo.com
-SMTP_PASSWORD=g8PKhQ5Brz1FXUIj
-SENDER_EMAIL=mdsajibhossen038@gmail.com
+SMTP_USER=sajibhossen560@gmail.com
+SMTP_PASSWORD=eiiy cjxn vtli epfe
+SENDER_EMAIL=sajibhossen560@gmail.com
 
